--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   margin: 0;
@@ -9,16 +9,29 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  background: linear-gradient(90deg, hsla(12, 84%, 68%, 1) 0%, hsla(343, 100%, 66%, 1) 100%);
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.app {
+  background: linear-gradient(
+    90deg,
+    hsla(12, 84%, 68%, 1) 0%,
+    hsla(343, 100%, 66%, 1) 100%
+  );
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  color: #FFF;
-  padding: 1.5rem;
+  min-height: 100vh;
+  padding: .8rem;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
 }
@@ -28,9 +41,7 @@ h1,h2,h3,h4,h5,h6 {
   padding: 2.8rem 3.2rem;
   border-radius: 5px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  width: 100%;
-  max-width: 800px; /* Perbesar lebar maksimal */
-  margin-top: 30px;
+  max-width: 800px;
 }
 
 .app-title {
@@ -38,7 +49,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .app-title h1 {
-  margin-bottom: .7rem;
+  margin-bottom: 0.7rem;
   font-size: 2.5rem;
   text-align: center;
 }
@@ -49,27 +60,17 @@ h1,h2,h3,h4,h5,h6 {
 
 .main-content {
   display: flex;
-  flex-direction: column; /* Default untuk mobile */
-  gap: 20px;
+  justify-content: space-between;
+  gap: 1.5rem;
 }
 
-/* Split menjadi dua kolom untuk desktop */
-@media screen and (min-width: 768px) {
-  .main-content {
-    flex-direction: row; /* Jadi dua kolom */
-    justify-content: space-between;
-  }
-
-  .left-column, .right-column {
-    flex: 1; /* Bagi ukuran sama */
-  }
-
-  /* .left-column {
-    margin-right: 20px; 
-  } */
+.left-column,
+.right-column {
+  flex: 1; /* Bagi ukuran sama */
 }
 
-.left-column h2, .right-column h2 {
+.left-column h2,
+.right-column h2 {
   text-align: center;
   margin-bottom: 0;
 }
@@ -125,19 +126,48 @@ h1,h2,h3,h4,h5,h6 {
 
 #task-list li {
   background-color: #2c3e50;
-  margin: 10px 0;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 0.1rem;
   font-size: 1rem;
+  margin: .8rem 0;
 }
 
-#task-list li span {
-  font-weight: bold;
+#task-list li h4 {
+  font-weight: 500;
+  margin-bottom: .4rem;
+}
+
+#task-list li small {
+  color: #e3e3e3;
 }
 
 .empty-history {
   color: #888;
   font-style: italic;
   text-align: center;
-  margin: 2rem .5rem;
+  margin: 2rem 0.5rem;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 2rem 1.5rem;
+  }
+
+  .timer-display {
+    font-size: 2rem;
+  }
+
+  .main-content {
+    flex-direction: column;
+  }
+
+  .app-title h1 {
+    margin-bottom: 0.7rem;
+    font-size: 1.6rem;
+  }
+
+  .left-column h2,
+  .right-column h2 {
+    font-size: 1.15rem;
+  }
 }
