--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,13 @@ h6 {
   width: 100%;
 }
 
+.alert-box {
+  display: none;
+  color: #ff5f4f;
+  text-align: center;
+  margin-bottom: .8rem;
+}
+
 #startStop:hover {
   background-color: #ff5f4f;
 }
